[gd_scene load_steps=9 format=3 uid="uid://dv2gcdbr10esg"]

[ext_resource type="Script" path="res://scripts/enemy_bullet.gd" id="1_j5yph"]
[ext_resource type="Texture2D" uid="uid://bcwqd7x0k8lwj" path="res://icon.svg" id="2_48xvl"]
[ext_resource type="Texture2D" uid="uid://cryymjeetg5" path="res://assets/sprites/characters/wormthing_bullet.png" id="2_364xr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hxd72"]
atlas = ExtResource("2_364xr")
region = Rect2(0, 0, 130, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_xabo7"]
atlas = ExtResource("2_364xr")
region = Rect2(130, 0, 130, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0dml"]
atlas = ExtResource("2_364xr")
region = Rect2(0, 148, 130, 148)

[sub_resource type="SpriteFrames" id="SpriteFrames_shx60"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxd72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xabo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0dml")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oo0ma"]
size = Vector2(32, 32)

[node name="EnemyBullet" type="Node2D"]
script = ExtResource("1_j5yph")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 50
sprite_frames = SubResource("SpriteFrames_shx60")
autoplay = "default"
frame_progress = 0.168689

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_48xvl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_oo0ma")
debug_color = Color(1, 1, 1, 0.42)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
